--- a/css/sign-index.css
+++ b/css/sign-index.css
@@ -959,7 +959,7 @@
         background: white;
         float: left;
         margin-left: 1237px;
-        /* display: none; */
+        display: none;
         /* border:1px solid red; */
     }
 
